# app/serializers/move_serializer.rb
@@ -1,0 +1,6 @@
+# frozen_string_literal: true
+
+class MoveSerializer < ActiveModel::Serializer
+  attributes :id, :name, :damage
+  has_many :actions
+end
